updates metric scores

--- a/evaluation/scores.ipynb
+++ b/evaluation/scores.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scores of injection experiments"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### load data"
+    "### Load results"
    ]
   },
   {
@@ -78,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### get results: twitter_drift_induction"
+    "### Extract results: twitter_drift_induction"
    ]
   },
   {
@@ -149,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### get results: amazon_drift_induction.ipynb"
+    "### Extract results: amazon_drift_induction.ipynb"
    ]
   },
   {
@@ -221,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### experiment configuration"
+    "### Configuration of conducted experiments"
    ]
   },
   {
@@ -248,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### add comparison values"
+    "### Add comparison detector values"
    ]
   },
   {
@@ -278,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### print overview"
+    "### Print overview"
    ]
   },
   {
@@ -345,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### compute scores"
+    "# Functions for metric scores"
    ]
   },
   {
@@ -388,7 +395,54 @@
     "        print(\" sum_rating \", round(sum_rating, 4))\n",
     "        print(\" result \", round(numpy.sum(scores) / sum_rating, 4))\n",
     "    \n",
-    "    return np.sum(scores) / sum_rating"
+    "    return np.sum(scores) / sum_rating\n",
+    "\n",
+    "\n",
+    "def get_label(name):\n",
+    "    mappings = {\n",
+    "        \"cdbd\" : \"CDBD\",\n",
+    "        \"csdd\" : \"CosSim\",\n",
+    "        \"kts\" : \"KTS\",\n",
+    "        \"aks\" : \"KS\",\n",
+    "        \"lsdd\" : \"LSDD\",\n",
+    "        \"ammd\" : \"MMD\",\n",
+    "        \n",
+    "        \"twitterbert_768\" : \"Twitter, BERT-768\",\n",
+    "        \"twitterbow_50\" : \"Twitter, BoW-50\",\n",
+    "        \"twitterbow_768\" : \"Twitter, BoW-768\",\n",
+    "        \"amazonbert_768\" : \"Amazon, BERT-768\",\n",
+    "        \"amazonbow_50\" : \"Amazon, BoW-50\",\n",
+    "        \"amazonbow_768\" : \"Amazon, BoW-768\",\n",
+    "    }\n",
+    "    if(name in mappings):\n",
+    "        return mappings[name]\n",
+    "    else:\n",
+    "        print(\"Unknown:\", name)\n",
+    "        return name\n",
+    "\n",
+    "\n",
+    "def get_sorted_detectors(detector_keys):\n",
+    "    labels = {}\n",
+    "    for detector in detectors:\n",
+    "        labels[get_label(detector)] = detector\n",
+    "    sorted_ = []\n",
+    "    for detector in sorted(labels.keys()):\n",
+    "        sorted_.append(labels[detector])\n",
+    "    return sorted_\n",
+    "\n",
+    "\n",
+    "def format_float(value):\n",
+    "    rounded = np.round(value, 4)\n",
+    "    if(rounded == 0): # handle -0.0\n",
+    "        rounded = 0\n",
+    "    return (format(rounded, '.4f'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scores (with penalty)"
    ]
   },
   {
@@ -397,6 +451,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print_scores_with_penalty = True\n",
+    "\n",
     "scores = {}\n",
     "for dataset in evaluation_data:\n",
     "    scores[dataset] = {}\n",
@@ -458,142 +514,248 @@
     }
    ],
    "source": [
-    "pprint.pprint(scores)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Print table"
+    "if(print_scores_with_penalty):\n",
+    "    pprint.pprint(scores)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_label(name):\n",
-    "    mappings = {\n",
-    "        \"cdbd\" : \"CDBD\",\n",
-    "        \"csdd\" : \"CosSim\",\n",
-    "        \"kts\" : \"KTS\",\n",
-    "        \"aks\" : \"KS\",\n",
-    "        \"lsdd\" : \"LSDD\",\n",
-    "        \"ammd\" : \"MMD\",\n",
-    "        \n",
-    "        \"twitterbert_768\" : \"Twitter, BERT-768\",\n",
-    "        \"twitterbow_50\" : \"Twitter, BoW-50\",\n",
-    "        \"twitterbow_768\" : \"Twitter, BoW-768\",\n",
-    "        \"amazonbert_768\" : \"Amazon, BERT-768\",\n",
-    "        \"amazonbow_50\" : \"Amazon, BoW-50\",\n",
-    "        \"amazonbow_768\" : \"Amazon, BoW-768\",\n",
-    "    }\n",
-    "    if(name in mappings):\n",
-    "        return mappings[name]\n",
-    "    else:\n",
-    "        print(\"Unknown:\", name)\n",
-    "        return name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       ,          , CosSim , KTS , KS , MMD , LSDD , CDBD , ∅ , \n",
-      "Twitter, BERT-768 , 0.0002 , 0.2749 , 0.0681 , 0.2753 , 0.2832 , 0.0406 , 0.1571 , \n",
-      "Twitter, BoW-50 , 0.0191 , 0.2681 , 0.179 , 0.3084 , 0.3343 , -0.024 , 0.1808 , \n",
-      "Twitter, BoW-768 , 0.0588 , 0.3368 , 0.1493 , 0.334 , 0.2826 , -0.0107 , 0.1918 , \n",
-      "Amazon, BERT-768 , 0.0009 , 0.347 , 0.1039 , 0.3521 , 0.3228 , 0.0 , 0.1878 , \n",
-      "Amazon, BoW-50 , 0.0032 , 0.3306 , 0.0849 , 0.3001 , 0.355 , 0.0 , 0.179 , \n",
-      "Amazon, BoW-768 , 0.0008 , 0.2047 , 0.0312 , 0.2249 , 0.0972 , -0.0 , 0.0931 , \n",
-      "∅     ,         , 0.0138 , 0.2937 , 0.1027 , 0.2991 , 0.2792 , 0.001 , "
+      "Dataset, Model , CDBD , CosSim , KS , KTS , LSDD , MMD , $\\varnothing$ , \n",
+      "Amazon, BoW-50 , 0.0000 , 0.0032 , 0.0849 , 0.3306 , 0.3550 , 0.3001 , 0.1790 , \n",
+      "Amazon, BoW-768 , 0.0000 , 0.0008 , 0.0312 , 0.2047 , 0.0972 , 0.2249 , 0.0931 , \n",
+      "Amazon, BERT-768 , 0.0000 , 0.0009 , 0.1039 , 0.3470 , 0.3228 , 0.3521 , 0.1878 , \n",
+      "Twitter, BoW-50 , -0.0240 , 0.0191 , 0.1790 , 0.2681 , 0.3343 , 0.3084 , 0.1808 , \n",
+      "Twitter, BoW-768 , -0.0107 , 0.0588 , 0.1493 , 0.3368 , 0.2826 , 0.3340 , 0.1918 , \n",
+      "Twitter, BERT-768 , 0.0406 , 0.0002 , 0.0681 , 0.2749 , 0.2832 , 0.2753 , 0.1571 , \n",
+      "$\\varnothing$     ,         , 0.0010 , 0.0138 , 0.1027 , 0.2937 , 0.2792 , 0.2991 , "
      ]
     }
    ],
    "source": [
+    "sorted_detectors = get_sorted_detectors(scores[\"twitter\"][\"bert_768\"])\n",
+    "sorted_datasets = sorted(scores.keys())\n",
+    "sorted_modes = ['bow_50', 'bow_768', 'bert_768']\n",
+    "\n",
+    "# Get values to compute means\n",
     "s = {}\n",
     "c = {}\n",
     "sd = {}\n",
     "cd = {}\n",
-    "    \n",
-    "for dataset in scores:\n",
+    "for dataset in sorted_datasets:\n",
     "    if(dataset == \"test\"):\n",
     "        continue\n",
-    "    for mode in evaluation_data[dataset]:\n",
-    "        for detector in evaluation_data[dataset][mode]:\n",
+    "    for mode in sorted_modes:\n",
+    "        for detector in sorted_detectors:\n",
     "            score = scores[dataset][mode][detector]\n",
     "            sd[detector] = sd.get(detector,0) + score\n",
     "            s[dataset+mode] = s.get(dataset+mode,0) + score\n",
     "            cd[detector] = cd.get(detector,0) + 1\n",
     "            c[dataset+mode] = c.get(dataset+mode,0) + 1\n",
     "\n",
+    "\n",
+    "            \n",
     "end=\" , \"\n",
-    "print(\"       ,         \", end=end)\n",
-    "for detector in evaluation_data[\"twitter\"][\"bert_768\"]:\n",
+    "print(\"Dataset, Model\", end=end)\n",
+    "for detector in sorted_detectors:\n",
     "    print(get_label(detector), end=end)\n",
-    "print(\"∅\", end=end) # ∅ $\\varnothing$\n",
+    "print(\"$\\\\varnothing$\", end=end) # ∅ $\\varnothing$\n",
     "    \n",
-    "for dataset in scores:\n",
+    "for dataset in sorted_datasets:\n",
     "    if(dataset == \"test\"):\n",
     "        continue\n",
-    "    for mode in evaluation_data[dataset]:\n",
+    "    for mode in sorted_modes:\n",
     "        print()\n",
     "        print(get_label(dataset+mode), end=end)\n",
-    "        for detector in evaluation_data[dataset][mode]:\n",
+    "        for detector in sorted_detectors:\n",
     "            score = scores[dataset][mode][detector]\n",
-    "            print(np.round(score, 4), end=end)\n",
+    "            print(format_float(score), end=end)\n",
     "            \n",
-    "        print(np.round(s[dataset+mode]/c[dataset+mode], 4), end=end)\n",
+    "        print(format_float(s[dataset+mode]/c[dataset+mode]), end=end)\n",
     "\n",
     "print()\n",
-    "print(\"∅     ,        \", end=end) # ∅ $\\varnothing$\n",
-    "for detector in evaluation_data[\"twitter\"][\"bert_768\"]:\n",
-    "    print(np.round(sd[detector]/cd[detector], 4), end=end)"
+    "print('$\\\\varnothing$     ,        ', end=end) # ∅ $\\varnothing$\n",
+    "for detector in sorted_detectors:\n",
+    "    print(format_float(sd[detector]/cd[detector]), end=end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(False):\n",
+    "    pprint.pprint(s)\n",
+    "    pprint.pprint(c)\n",
+    "    pprint.pprint(sd)\n",
+    "    pprint.pprint(cd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scores (without penalty)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_scores_without_penalty = True\n",
+    "\n",
+    "scoresNoPenalty = {}\n",
+    "for dataset in evaluation_data:\n",
+    "    scoresNoPenalty[dataset] = {}\n",
+    "    for mode in evaluation_data[dataset]:\n",
+    "        scoresNoPenalty[dataset][mode] = {}\n",
+    "        for detector in evaluation_data[dataset][mode]:\n",
+    "            scoresNoPenalty[dataset][mode][detector] = eval_metric_ext(negative_words_percentage, evaluation_data[dataset][mode][detector], 0, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'amazonbert_768': 1.126760167886307,\n",
-      " 'amazonbow_50': 1.0738160172036426,\n",
-      " 'amazonbow_768': 0.5587754234023427,\n",
-      " 'twitterbert_768': 0.9423392292934941,\n",
-      " 'twitterbow_50': 1.0848672578577345,\n",
-      " 'twitterbow_768': 1.1508853066469156}\n",
-      "{'amazonbert_768': 6,\n",
-      " 'amazonbow_50': 6,\n",
-      " 'amazonbow_768': 6,\n",
-      " 'twitterbert_768': 6,\n",
-      " 'twitterbow_50': 6,\n",
-      " 'twitterbow_768': 6}\n",
-      "{'aks': 0.6164238282614938,\n",
-      " 'ammd': 1.7948064591229165,\n",
-      " 'cdbd': 0.005919976021928273,\n",
-      " 'csdd': 0.08299083551341273,\n",
-      " 'kts': 1.7620610062246054,\n",
-      " 'lsdd': 1.67524129714608}\n",
-      "{'aks': 6, 'ammd': 6, 'cdbd': 6, 'csdd': 6, 'kts': 6, 'lsdd': 6}\n"
+      "{'amazon': {'bert_768': {'aks': 0.5541084112948587,\n",
+      "                         'ammd': 0.6100722945244665,\n",
+      "                         'cdbd': 1.0000000000000002,\n",
+      "                         'csdd': 0.001617742366063258,\n",
+      "                         'kts': 0.6262358487863721,\n",
+      "                         'lsdd': 0.6018209709120674},\n",
+      "            'bow_50': {'aks': 0.5691815118278455,\n",
+      "                       'ammd': 0.7690673051797943,\n",
+      "                       'cdbd': 1.0000000000000002,\n",
+      "                       'csdd': 0.005845381924603167,\n",
+      "                       'kts': 0.7507730797663515,\n",
+      "                       'lsdd': 0.7400130260602666},\n",
+      "            'bow_768': {'aks': 0.5183443949178279,\n",
+      "                        'ammd': 0.6678936151821491,\n",
+      "                        'cdbd': 0.9999999999115522,\n",
+      "                        'csdd': 0.005456990262795705,\n",
+      "                        'kts': 0.7606747111956179,\n",
+      "                        'lsdd': 0.6042401833285367}},\n",
+      " 'test': {'testmode': {'bad': 0.0,\n",
+      "                       'fake': 0.8225371042906146,\n",
+      "                       'perfect': 1.0000000000000002}},\n",
+      " 'twitter': {'bert_768': {'aks': 0.5503075304925326,\n",
+      "                          'ammd': 0.7283239104505317,\n",
+      "                          'cdbd': 0.7995226357138224,\n",
+      "                          'csdd': 0.00042850127111457954,\n",
+      "                          'kts': 0.6838677339626147,\n",
+      "                          'lsdd': 0.7112265055660189},\n",
+      "             'bow_50': {'aks': 0.6858343370872114,\n",
+      "                        'ammd': 0.9254161337659524,\n",
+      "                        'cdbd': 0.7731019127593601,\n",
+      "                        'csdd': 0.023990049512672838,\n",
+      "                        'kts': 0.9256907100591771,\n",
+      "                        'lsdd': 0.8912974922261228},\n",
+      "             'bow_768': {'aks': 0.6507179169942454,\n",
+      "                         'ammd': 0.8980332000200234,\n",
+      "                         'cdbd': 0.7042950068135075,\n",
+      "                         'csdd': 0.1351430606790929,\n",
+      "                         'kts': 0.8718189224544726,\n",
+      "                         'lsdd': 0.852643212721768}}}\n"
      ]
     }
    ],
    "source": [
-    "pprint.pprint(s)\n",
-    "pprint.pprint(c)\n",
-    "pprint.pprint(sd)\n",
-    "pprint.pprint(cd)"
+    "if(print_scores_without_penalty):\n",
+    "    pprint.pprint(scoresNoPenalty)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset, Model , CDBD , CosSim , KS , KTS , LSDD , MMD , $\\varnothing$ , \n",
+      "Amazon, BoW-50 , 1.0000 , 0.0058 , 0.5692 , 0.7508 , 0.7400 , 0.7691 , 0.6391 , \n",
+      "Amazon, BoW-768 , 1.0000 , 0.0055 , 0.5183 , 0.7607 , 0.6042 , 0.6679 , 0.5928 , \n",
+      "Amazon, BERT-768 , 1.0000 , 0.0016 , 0.5541 , 0.6262 , 0.6018 , 0.6101 , 0.5656 , \n",
+      "Twitter, BoW-50 , 0.7731 , 0.0240 , 0.6858 , 0.9257 , 0.8913 , 0.9254 , 0.7042 , \n",
+      "Twitter, BoW-768 , 0.7043 , 0.1351 , 0.6507 , 0.8718 , 0.8526 , 0.8980 , 0.6854 , \n",
+      "Twitter, BERT-768 , 0.7995 , 0.0004 , 0.5503 , 0.6839 , 0.7112 , 0.7283 , 0.5789 , \n",
+      "$\\varnothing$     ,         , 0.8795 , 0.0287 , 0.5881 , 0.7698 , 0.7335 , 0.7665 , "
+     ]
+    }
+   ],
+   "source": [
+    "sorted_detectors = get_sorted_detectors(scores[\"twitter\"][\"bert_768\"])\n",
+    "sorted_datasets = sorted(scores.keys())\n",
+    "sorted_modes = ['bow_50', 'bow_768', 'bert_768']\n",
+    "\n",
+    "# Get values to compute means\n",
+    "s = {}\n",
+    "c = {}\n",
+    "sd = {}\n",
+    "cd = {}\n",
+    "for dataset in sorted_datasets:\n",
+    "    if(dataset == \"test\"):\n",
+    "        continue\n",
+    "    for mode in sorted_modes:\n",
+    "        for detector in sorted_detectors:\n",
+    "            score = scoresNoPenalty[dataset][mode][detector]\n",
+    "            sd[detector] = sd.get(detector,0) + score\n",
+    "            s[dataset+mode] = s.get(dataset+mode,0) + score\n",
+    "            cd[detector] = cd.get(detector,0) + 1\n",
+    "            c[dataset+mode] = c.get(dataset+mode,0) + 1\n",
+    "\n",
+    "\n",
+    "            \n",
+    "end=\" , \"\n",
+    "print(\"Dataset, Model\", end=end)\n",
+    "for detector in sorted_detectors:\n",
+    "    print(get_label(detector), end=end)\n",
+    "print(\"$\\\\varnothing$\", end=end) # ∅ $\\varnothing$\n",
+    "    \n",
+    "for dataset in sorted_datasets:\n",
+    "    if(dataset == \"test\"):\n",
+    "        continue\n",
+    "    for mode in sorted_modes:\n",
+    "        print()\n",
+    "        print(get_label(dataset+mode), end=end)\n",
+    "        for detector in sorted_detectors:\n",
+    "            score = scoresNoPenalty[dataset][mode][detector]\n",
+    "            print(format_float(score), end=end)\n",
+    "            \n",
+    "        print(format_float(s[dataset+mode]/c[dataset+mode]), end=end)\n",
+    "\n",
+    "print()\n",
+    "print('$\\\\varnothing$     ,        ', end=end) # ∅ $\\varnothing$\n",
+    "for detector in sorted_detectors:\n",
+    "    print(format_float(sd[detector]/cd[detector]), end=end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(False):\n",
+    "    pprint.pprint(s)\n",
+    "    pprint.pprint(c)\n",
+    "    pprint.pprint(sd)\n",
+    "    pprint.pprint(cd)"
    ]
   },
   {
