testing power in metric

--- a/evaluation/scores_metric_c.ipynb
+++ b/evaluation/scores_metric_c.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scores of injection experiments"
+    "# Scores of injection experiments (**metric version C**)\n",
+    "\n",
+    "This rates the first results very high, but last results probably too low.\n",
+    "\n",
+    "Printed tables can be pasted at https://www.tablesgenerator.com/"
    ]
   },
   {
@@ -361,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eval_metric_ext(negative_words_percentage, p_values, factor_penalty, print_info):\n",
+    "def eval_metric_pow(negative_words_percentage, p_values, factor_penalty, power_base, print_info):\n",
     "    \n",
     "    # remove first element (no injected drift)\n",
     "    neg_words_perc = negative_words_percentage[1:]\n",
@@ -372,7 +376,7 @@
     "    for i in range(len(p_vals)):\n",
     "        scores.append(1 - p_vals[i])\n",
     "    if(print_info):\n",
-    "        print(\" difference score \", round(numpy.sum(scores), 4))\n",
+    "        print(\" difference score \", round(np.sum(scores), 4))\n",
     "    \n",
     "    # No injected drift in first element\n",
     "    # High penalty for low p-value\n",
@@ -381,19 +385,19 @@
     "        scores[i] = (scores[i] - penalty)\n",
     "    if(print_info):\n",
     "        print(\" penalty \", round(penalty, 4), \"= 1 -\", round(p_values[0], 4))\n",
-    "        print(round(numpy.sum(scores), 4), \"penalty score\")\n",
+    "        print(round(np.sum(scores), 4), \"penalty score\")\n",
     "        \n",
     "    # Earlier drift detection is better (sensitivity)\n",
     "    sum_rating = 0\n",
     "    for i in range(len(scores)):\n",
-    "        rating = 1/neg_words_perc[i]\n",
+    "        rating = pow(power_base, 1/neg_words_perc[i])\n",
     "        sum_rating += rating\n",
     "        scores[i] = scores[i] * rating\n",
     "    \n",
     "    if(print_info):\n",
-    "        print(\" scores \", numpy.round(scores, 2))\n",
+    "        print(\" scores \", np.round(scores, 2))\n",
     "        print(\" sum_rating \", round(sum_rating, 4))\n",
-    "        print(\" result \", round(numpy.sum(scores) / sum_rating, 4))\n",
+    "        print(\" result \", round(np.sum(scores) / sum_rating, 4))\n",
     "    \n",
     "    return np.sum(scores) / sum_rating\n",
     "\n",
@@ -452,11 +456,10 @@
    "outputs": [],
    "source": [
     "print_textbf = True\n",
-    "#best_marker_start = \"\\\\textbf{\" \n",
-    "#best_marker_start = \"BSLSHBSLSHtextbf{\" # backslashes could not be parsed in online tool\n",
-    "#best_marker_end = \"}\"\n",
-    "best_marker_start = \"\"\n",
-    "best_marker_end = \"⬛\""
+    "best_marker_start = \"\\\\textbf{\"\n",
+    "best_marker_end = \"}\"\n",
+    "best_marker_start = \"⬛\"\n",
+    "best_marker_end = \"\""
    ]
   },
   {
@@ -480,7 +483,7 @@
     "    for mode in evaluation_data[dataset]:\n",
     "        scores[dataset][mode] = {}\n",
     "        for detector in evaluation_data[dataset][mode]:\n",
-    "            scores[dataset][mode][detector] = eval_metric_ext(negative_words_percentage, evaluation_data[dataset][mode][detector], 1, False)"
+    "            scores[dataset][mode][detector] = eval_metric_pow(negative_words_percentage, evaluation_data[dataset][mode][detector], 1, 2, False)"
    ]
   },
   {
@@ -492,45 +495,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'amazon': {'bert_768': {'aks': 0.1038891377276589,\n",
-      "                         'ammd': 0.35207229452446626,\n",
+      "{'amazon': {'bert_768': {'aks': 0.006043029549983538,\n",
+      "                         'ammd': 0.006000091330780542,\n",
       "                         'cdbd': 0.0,\n",
-      "                         'csdd': 0.0009419449035998787,\n",
-      "                         'kts': 0.3470358487863721,\n",
-      "                         'lsdd': 0.32282094194420985},\n",
-      "            'bow_50': {'aks': 0.08493507904662598,\n",
-      "                       'ammd': 0.30006730517979396,\n",
+      "                         'csdd': 5.501515712396836e-05,\n",
+      "                         'kts': 0.027200064300705467,\n",
+      "                         'lsdd': 0.018000041219333688},\n",
+      "            'bow_50': {'aks': 0.003643577894274681,\n",
+      "                       'ammd': 0.025000116259637672,\n",
       "                       'cdbd': 0.0,\n",
-      "                       'csdd': 0.00322754592606801,\n",
-      "                       'kts': 0.3305730797663515,\n",
-      "                       'lsdd': 0.35501300728480323},\n",
-      "            'bow_768': {'aks': 0.031178169007641,\n",
-      "                        'ammd': 0.224893615182149,\n",
-      "                        'cdbd': -8.00317837646986e-11,\n",
-      "                        'csdd': 0.000788754483987109,\n",
-      "                        'kts': 0.20467471119561784,\n",
-      "                        'lsdd': 0.09724017361297943}},\n",
-      " 'test': {'testmode': {'bad': -1.0000000000000002,\n",
-      "                       'fake': 0.655870437623948,\n",
-      "                       'perfect': 1.0000000000000002}},\n",
-      " 'twitter': {'bert_768': {'aks': 0.0681375447213533,\n",
-      "                          'ammd': 0.27532391045053156,\n",
-      "                          'cdbd': 0.040584582849029764,\n",
-      "                          'csdd': 0.00019896378408455016,\n",
-      "                          'kts': 0.27486773396261455,\n",
-      "                          'lsdd': 0.28322649352588036},\n",
-      "             'bow_50': {'aks': 0.1789771207290265,\n",
-      "                        'ammd': 0.3084161337659523,\n",
-      "                        'cdbd': -0.023975765895264758,\n",
-      "                        'csdd': 0.01906157985477489,\n",
-      "                        'kts': 0.268090710059177,\n",
-      "                        'lsdd': 0.3342974793440688},\n",
-      "             'bow_768': {'aks': 0.149306777029188,\n",
-      "                         'ammd': 0.3340332000200234,\n",
-      "                         'cdbd': -0.01068884085180495,\n",
-      "                         'csdd': 0.058772046560898294,\n",
-      "                         'kts': 0.3368189224544724,\n",
-      "                         'lsdd': 0.28264320143413824}}}\n"
+      "                       'csdd': 9.965912989239957e-05,\n",
+      "                       'kts': 0.04300010769702112,\n",
+      "                       'lsdd': 0.08100007228193422},\n",
+      "            'bow_768': {'aks': 0.0007441663713498737,\n",
+      "                        'ammd': 0.004000049987231799,\n",
+      "                        'cdbd': -6.431310448433687e-11,\n",
+      "                        'csdd': 2.1278925353253043e-05,\n",
+      "                        'kts': -0.00979991831936586,\n",
+      "                        'lsdd': 0.021999981726778296}},\n",
+      " 'test': {'testmode': {'bad': -0.9999999999999998,\n",
+      "                       'fake': 0.4333335270178459,\n",
+      "                       'perfect': 0.9999999999999998}},\n",
+      " 'twitter': {'bert_768': {'aks': 0.0024774133489263972,\n",
+      "                          'ammd': 0.015000077578348973,\n",
+      "                          'cdbd': 0.01041386569050983,\n",
+      "                          'csdd': 5.06640689814304e-06,\n",
+      "                          'kts': 0.006400046332651051,\n",
+      "                          'lsdd': 0.054000042229840936},\n",
+      "             'bow_50': {'aks': 0.01552589616719246,\n",
+      "                        'ammd': 0.1630001290944053,\n",
+      "                        'cdbd': -0.011507534365201402,\n",
+      "                        'csdd': 0.0006063590704283255,\n",
+      "                        'kts': 0.12360013591402877,\n",
+      "                        'lsdd': 0.14900014452530477},\n",
+      "             'bow_768': {'aks': 0.009642773281203046,\n",
+      "                         'ammd': 0.1550001531976559,\n",
+      "                         'cdbd': 0.03040296539031283,\n",
+      "                         'csdd': 0.0001001973307892541,\n",
+      "                         'kts': 0.08780022116265193,\n",
+      "                         'lsdd': 0.14300006931617595}}}\n"
      ]
     }
    ],
@@ -548,14 +551,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset, Model    , CDBD , CosSim , KS , KTS , LSDD , MMD , $\\varnothing$ , \n",
-      "Amazon,  BoW-50   , 0.0000 , 0.0032 , 0.0849 , 0.3306 , 0.3550⬛ , 0.3001 , 0.1790 , \n",
-      "Amazon,  BoW-768  , 0.0000 , 0.0008 , 0.0312 , 0.2047 , 0.0972 , 0.2249⬛ , 0.0931 , \n",
-      "Amazon,  BERT-768 , 0.0000 , 0.0009 , 0.1039 , 0.3470 , 0.3228 , 0.3521⬛ , 0.1878 , \n",
-      "Twitter, BoW-50   , -0.0240 , 0.0191 , 0.1790 , 0.2681 , 0.3343⬛ , 0.3084 , 0.1808 , \n",
-      "Twitter, BoW-768  , -0.0107 , 0.0588 , 0.1493 , 0.3368⬛ , 0.2826 , 0.3340 , 0.1918 , \n",
-      "Twitter, BERT-768 , 0.0406 , 0.0002 , 0.0681 , 0.2749 , 0.2832⬛ , 0.2753 , 0.1571 , \n",
-      "$\\varnothing$     ,        , 0.0010 , 0.0138 , 0.1027 , 0.2937 , 0.2792 , 0.2991 , "
+      "Dataset, Model    , CDBD   , CosSim , KS     , KTS    , LSDD   , MMD    , $\\varnothing$ , \n",
+      "Amazon,  BoW-50   , 0.0000 , 0.0001 , 0.0036 , 0.0430 , ⬛0.0810 , 0.0250 , 0.0255 , \n",
+      "Amazon,  BoW-768  , 0.0000 , 0.0000 , 0.0007 , -0.0098 , ⬛0.0220 , 0.0040 , 0.0028 , \n",
+      "Amazon,  BERT-768 , 0.0000 , 0.0001 , 0.0060 , ⬛0.0272 , 0.0180 , 0.0060 , 0.0095 , \n",
+      "Twitter, BoW-50   , -0.0115 , 0.0006 , 0.0155 , 0.1236 , 0.1490 , ⬛0.1630 , 0.0734 , \n",
+      "Twitter, BoW-768  , 0.0304 , 0.0001 , 0.0096 , 0.0878 , 0.1430 , ⬛0.1550 , 0.0710 , \n",
+      "Twitter, BERT-768 , 0.0104 , 0.0000 , 0.0025 , 0.0064 , ⬛0.0540 , 0.0150 , 0.0147 , \n",
+      "$\\varnothing$     ,        , 0.0049 , 0.0001 , 0.0063 , 0.0464 , 0.0778 , 0.0613 , "
      ]
     }
    ],
@@ -585,7 +588,8 @@
     "end=\" , \"\n",
     "print(\"Dataset, Model   \", end=end)\n",
     "for detector in sorted_detectors:\n",
-    "    print(get_label(detector), end=end)\n",
+    "    #print(get_label(detector), end=end)\n",
+    "    print(\"{:<6}\".format(get_label(detector)), end=end)\n",
     "print(\"$\\\\varnothing$\", end=end) # ∅ $\\varnothing$\n",
     "    \n",
     "for dataset in sorted_datasets:\n",
@@ -606,10 +610,11 @@
     "        for detector in sorted_detectors:\n",
     "            score = scores[dataset][mode][detector]\n",
     "            if(print_textbf and detector == max_detector):\n",
-    "                print(best_marker_start, end=\"\")\n",
+    "                print(best_marker_start, end=\"\") # backslash could not be parsed in latex tool\n",
     "            print(format_float(score), end=\"\")\n",
     "            if(print_textbf and detector == max_detector):\n",
     "                print(best_marker_end, end=\"\")\n",
+    "                \n",
     "            print(\"\", end=end)\n",
     "            \n",
     "        print(format_float(s[dataset+mode]/c[dataset+mode]), end=end)\n",
@@ -654,7 +659,7 @@
     "    for mode in evaluation_data[dataset]:\n",
     "        scoresNoPenalty[dataset][mode] = {}\n",
     "        for detector in evaluation_data[dataset][mode]:\n",
-    "            scoresNoPenalty[dataset][mode][detector] = eval_metric_ext(negative_words_percentage, evaluation_data[dataset][mode][detector], 0, False)"
+    "            scoresNoPenalty[dataset][mode][detector] = eval_metric_pow(negative_words_percentage, evaluation_data[dataset][mode][detector], 0, 2, False)"
    ]
   },
   {
@@ -666,45 +671,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'amazon': {'bert_768': {'aks': 0.5541084112948587,\n",
-      "                         'ammd': 0.6100722945244665,\n",
-      "                         'cdbd': 1.0000000000000002,\n",
-      "                         'csdd': 0.001617742366063258,\n",
-      "                         'kts': 0.6262358487863721,\n",
-      "                         'lsdd': 0.6018209709120674},\n",
-      "            'bow_50': {'aks': 0.5691815118278455,\n",
-      "                       'ammd': 0.7690673051797943,\n",
-      "                       'cdbd': 1.0000000000000002,\n",
-      "                       'csdd': 0.005845381924603167,\n",
-      "                       'kts': 0.7507730797663515,\n",
-      "                       'lsdd': 0.7400130260602666},\n",
-      "            'bow_768': {'aks': 0.5183443949178279,\n",
-      "                        'ammd': 0.6678936151821491,\n",
-      "                        'cdbd': 0.9999999999115522,\n",
-      "                        'csdd': 0.005456990262795705,\n",
-      "                        'kts': 0.7606747111956179,\n",
-      "                        'lsdd': 0.6042401833285367}},\n",
+      "{'amazon': {'bert_768': {'aks': 0.4562623031171832,\n",
+      "                         'ammd': 0.26400009133078056,\n",
+      "                         'cdbd': 0.9999999999999998,\n",
+      "                         'csdd': 0.0007308126195873471,\n",
+      "                         'kts': 0.30640006430070543,\n",
+      "                         'lsdd': 0.29700007018719105},\n",
+      "            'bow_50': {'aks': 0.4878900106754941,\n",
+      "                       'ammd': 0.4940001162596377,\n",
+      "                       'cdbd': 0.9999999999999998,\n",
+      "                       'csdd': 0.0027174951284275554,\n",
+      "                       'kts': 0.46320010769702114,\n",
+      "                       'lsdd': 0.4660000910573973},\n",
+      "            'bow_768': {'aks': 0.48791039228153654,\n",
+      "                        'ammd': 0.4470000499872317,\n",
+      "                        'cdbd': 0.9999999999272705,\n",
+      "                        'csdd': 0.0046895147041618465,\n",
+      "                        'kts': 0.5462000816806339,\n",
+      "                        'lsdd': 0.5289999914423353}},\n",
       " 'test': {'testmode': {'bad': 0.0,\n",
-      "                       'fake': 0.8225371042906146,\n",
-      "                       'perfect': 1.0000000000000002}},\n",
-      " 'twitter': {'bert_768': {'aks': 0.5503075304925326,\n",
-      "                          'ammd': 0.7283239104505317,\n",
-      "                          'cdbd': 0.7995226357138224,\n",
-      "                          'csdd': 0.00042850127111457954,\n",
-      "                          'kts': 0.6838677339626147,\n",
-      "                          'lsdd': 0.7112265055660189},\n",
-      "             'bow_50': {'aks': 0.6858343370872114,\n",
-      "                        'ammd': 0.9254161337659524,\n",
-      "                        'cdbd': 0.7731019127593601,\n",
-      "                        'csdd': 0.023990049512672838,\n",
-      "                        'kts': 0.9256907100591771,\n",
-      "                        'lsdd': 0.8912974922261228},\n",
-      "             'bow_768': {'aks': 0.6507179169942454,\n",
-      "                         'ammd': 0.8980332000200234,\n",
-      "                         'cdbd': 0.7042950068135075,\n",
-      "                         'csdd': 0.1351430606790929,\n",
-      "                         'kts': 0.8718189224544726,\n",
-      "                         'lsdd': 0.852643212721768}}}\n"
+      "                       'fake': 0.6000001936845125,\n",
+      "                       'perfect': 0.9999999999999998}},\n",
+      " 'twitter': {'bert_768': {'aks': 0.48464739912010557,\n",
+      "                          'ammd': 0.4680000775783489,\n",
+      "                          'cdbd': 0.7693519185553023,\n",
+      "                          'csdd': 0.00023460389392817235,\n",
+      "                          'kts': 0.4154000463326511,\n",
+      "                          'lsdd': 0.4820000542699791},\n",
+      "             'bow_50': {'aks': 0.5223831125253774,\n",
+      "                        'ammd': 0.7800001290944052,\n",
+      "                        'cdbd': 0.7855701442894233,\n",
+      "                        'csdd': 0.005534828728326275,\n",
+      "                        'kts': 0.7812001359140287,\n",
+      "                        'lsdd': 0.7060001574073586},\n",
+      "             'bow_768': {'aks': 0.5110539132462605,\n",
+      "                         'ammd': 0.7190001531976558,\n",
+      "                         'cdbd': 0.7453868130556252,\n",
+      "                         'csdd': 0.07647121144898382,\n",
+      "                         'kts': 0.6228002211626519,\n",
+      "                         'lsdd': 0.7130000806038054}}}\n"
      ]
     }
    ],
@@ -722,14 +727,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset, Model    , CDBD , CosSim , KS , KTS , LSDD , MMD , $\\varnothing$ , \n",
-      "Amazon,  BoW-50   , 1.0000 , 0.0058 , 0.5692 , 0.7508 , 0.7400 , 0.7691⬛ , 0.6391 , \n",
-      "Amazon,  BoW-768  , 1.0000 , 0.0055 , 0.5183 , 0.7607⬛ , 0.6042 , 0.6679 , 0.5928 , \n",
-      "Amazon,  BERT-768 , 1.0000 , 0.0016 , 0.5541 , 0.6262⬛ , 0.6018 , 0.6101 , 0.5656 , \n",
-      "Twitter, BoW-50   , 0.7731 , 0.0240 , 0.6858 , 0.9257⬛ , 0.8913 , 0.9254 , 0.7042 , \n",
-      "Twitter, BoW-768  , 0.7043 , 0.1351 , 0.6507 , 0.8718 , 0.8526 , 0.8980⬛ , 0.6854 , \n",
-      "Twitter, BERT-768 , 0.7995 , 0.0004 , 0.5503 , 0.6839 , 0.7112 , 0.7283⬛ , 0.5789 , \n",
-      "$\\varnothing$     ,        , 0.8795 , 0.0287 , 0.5881 , 0.7698 , 0.7335 , 0.7665 , "
+      "Dataset, Model    , CDBD   , CosSim , KS     , KTS    , LSDD   , MMD    , $\\varnothing$ , \n",
+      "Amazon,  BoW-50   , 1.0000 , 0.0027 , 0.4879 , 0.4632 , 0.4660 , ⬛0.4940 , 0.4856 , \n",
+      "Amazon,  BoW-768  , 1.0000 , 0.0047 , 0.4879 , ⬛0.5462 , 0.5290 , 0.4470 , 0.5025 , \n",
+      "Amazon,  BERT-768 , 1.0000 , 0.0007 , ⬛0.4563 , 0.3064 , 0.2970 , 0.2640 , 0.3874 , \n",
+      "Twitter, BoW-50   , 0.7856 , 0.0055 , 0.5224 , ⬛0.7812 , 0.7060 , 0.7800 , 0.5968 , \n",
+      "Twitter, BoW-768  , 0.7454 , 0.0765 , 0.5111 , 0.6228 , 0.7130 , ⬛0.7190 , 0.5646 , \n",
+      "Twitter, BERT-768 , 0.7694 , 0.0002 , ⬛0.4846 , 0.4154 , 0.4820 , 0.4680 , 0.4366 , \n",
+      "$\\varnothing$     ,        , 0.8834 , 0.0151 , 0.4917 , 0.5225 , 0.5322 , 0.5287 , "
      ]
     }
    ],
@@ -759,7 +764,7 @@
     "end=\" , \"\n",
     "print(\"Dataset, Model   \", end=end)\n",
     "for detector in sorted_detectors:\n",
-    "    print(get_label(detector), end=end)\n",
+    "    print(\"{:<6}\".format(get_label(detector)), end=end)\n",
     "print(\"$\\\\varnothing$\", end=end) # ∅ $\\varnothing$\n",
     "    \n",
     "for dataset in sorted_datasets:\n",
@@ -778,11 +783,11 @@
     "            if(score > max_score):\n",
     "                max_score = score\n",
     "                max_detector = detector\n",
-    "\n",
+    "        \n",
     "        for detector in sorted_detectors:\n",
     "            score = scoresNoPenalty[dataset][mode][detector]\n",
     "            if(print_textbf and detector == max_detector):\n",
-    "                print(best_marker_start, end=\"\")\n",
+    "                print(best_marker_start, end=\"\") # backslash could not be parsed in latex tool\n",
     "            print(format_float(score), end=\"\")\n",
     "            if(print_textbf and detector == max_detector):\n",
     "                print(best_marker_end, end=\"\")\n",
