removed eml4u strings

--- a/evaluation/evaluation_metric.ipynb
+++ b/evaluation/evaluation_metric.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/eml4u/EML4U/data/amazon/results_a\n"
+      "/home/project/project/data/amazon/results_a\n"
      ]
     }
    ],
@@ -877,9 +877,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (EML4U)",
+   "display_name": "Python (project)",
    "language": "python",
-   "name": "eml4u"
+   "name": "project"
   },
   "language_info": {
    "codemirror_mode": {
