--- a/evaluation/runtimes.ipynb
+++ b/evaluation/runtimes.ipynb
@@ -267,9 +267,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (EML4U)",
+   "display_name": "Python (project)",
    "language": "python",
-   "name": "eml4u"
+   "name": "project"
   },
   "language_info": {
    "codemirror_mode": {
